# crosswordcubesolver

./: README
CrosswordCubeSolver.hsproj/: .uuid  CrosswordCubeSolver.cabal  CrosswordCubeSolver.hs  _CrosswordCubeSolver.hsplay  nerdcube_scrambled.cube  stack.yaml
