name: CrosswordCubeSolver
version: 1.0
cabal-version: 1.6
build-type: Simple
license: AllRightsReserved
stability: experimental
extra-source-files:
    nerdcube_scrambled.cube
Executable CrosswordCubeSolver
  main-is: CrosswordCubeSolver.hs
  buildable: True
  build-depends:
      base -any,
      array -any
